# rM2-stuff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Readme.md  crossShell.nix  flake.nix
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/launcher/: App.cpp  App.h  CMakeLists.txt  main.cpp
apps/rocket/: App.cpp  App.h  AppWidgets.cpp  AppWidgets.h  CMakeLists.txt  CommandSocket.cpp  CommandSocket.h  Commands.cpp  Commands.h  Config.h  GestureConfig.h  Hideable.h  Launcher.cpp  Launcher.h  main.cpp  rocket.service
apps/tilem/: CMakeLists.txt  Calculator.cpp  Calculator.h  Dialog.cpp  Dialog.h  KeyPad.cpp  KeyPad.h  Screen.cpp  Screen.h  main.cpp  skin.h
apps/tilem/assets/: backup.xcf  skin.xcf
apps/tilem/draft/: tilem.draft
apps/tilem/emu/: Makefile.in  grayimage.c  graylcd.h  monolcd.c  scancodes.h  z80.h  z80cmds.h  z80main.h
apps/tilem/emu/x3/: x3_subcore.c
apps/tilem/emu/x5/: x5_io.c
apps/tilem/emu/x6/: x6.h
apps/tilem/emu/xn/: xn.h
apps/tilem/emu/xp/: xp_subcore.c
apps/tilem/emu/xs/: xs.h  xs_subcore.c
apps/tilem/emu/xz/: xz.h
apps/tilem/lib/: CMakeLists.txt
apps/tilem/lib/emu/: calcs.c  graycolor.c  keypad.c  md5.c  rom.c  tilem.h  z80cb.h
apps/tilem/lib/emu/x4/: x4_init.c
apps/tilem/lib/emu/x5/: x5.h
apps/tilem/lib/emu/x6/: x6_io.c
apps/tilem/lib/emu/x7/: x7_init.c  x7_io.c
apps/tilem/lib/emu/xp/: xp.h
apps/tilem/lib/emu/xz/: xz_memory.c
apps/wabbitemu/: CMakeLists.txt  main.cpp
apps/wabbitemu/lib/emu/: CMakeLists.txt  Makefile  cert.c  flash.c  graylcd.c  lcd.c  link.c  memory.c  state.c  tilemint.h  timers.c  z80ddfd.h  z80ed.h
apps/wabbitemu/lib/emu/x1/: x1.h  x1_memory.c
apps/wabbitemu/lib/emu/x2/: x2.h  x2_init.c  x2_memory.c  x2_subcore.c
apps/wabbitemu/lib/emu/x3/: x3.h  x3_init.c  x3_io.c  x3_memory.c
apps/wabbitemu/lib/emu/x4/: x4.h  x4_io.c  x4_subcore.c
apps/wabbitemu/lib/emu/x5/: x5_init.c  x5_subcore.c
apps/wabbitemu/lib/emu/x6/: x6_init.c  x6_subcore.c
apps/wabbitemu/lib/emu/x7/: x7.h  x7_subcore.c
apps/wabbitemu/lib/emu/xn/: xn_init.c  xn_io.c  xn_memory.c  xn_subcore.c
apps/wabbitemu/lib/emu/xp/: xp_init.c  xp_io.c
apps/wabbitemu/lib/emu/xs/: xs_init.c  xs_io.c
apps/wabbitemu/lib/emu/xz/: xz_init.c  xz_io.c  xz_subcore.c
apps/yaft/: CMakeLists.txt  Readme.md  YaftWidget.cpp  YaftWidget.h  color.h  conf.h  config.cpp  config.h  glyph.h  keyboard.cpp  keyboard.h  keymap.cpp  keymap.h  layout.cpp  main.cpp  parse.c  parse.h  reader.cpp  screen.cpp  screen.h  terminal.cpp  terminal.h  util.h  yaft.c  yaft.h
apps/yaft/ctrlseq/: csi.h  dcs.h
apps/yaft/fb/: common.cpp  common.h  linux.h
apps/yaft/info/: yaft.src
apps/yaft2/: CMakeLists.txt  YaftWidget.cpp  YaftWidget.h  config.cpp  config.h  keyboard.cpp  keyboard.h  keymap.cpp  keymap.h  layout.cpp  layout.h  main.cpp  screen.cpp  screen.h
apps/yaft2/draft/: yaft2.draft
cmake/: BuildTypes.cmake  CPackOptions.cmake.in  Deploy.cmake  GenIPK.cmake  Packaging.cmake  rm-toolchain.cmake  rm.toolchain
doc/: screenshot.sh
libs/: CMakeLists.txt
libs/libYaft/: CMakeLists.txt  glyph.h  parse.h  terminal.cpp  terminal.h  yaft.h
libs/libYaft/ctrlseq/: csi.h
libs/libYaft/info/: yaft.src
libs/rMlib/: CMakeLists.txt  Canvas.cpp  Device.cpp  EmulatedFramebuffer.cpp  EmulatedInput.cpp  EmulatedKeyCodes.h  FrameBuffer.cpp  Gesture.cpp  Input.cpp  InputApple.cpp  apple_input.h  mxcfb.h  stb.c  thick.cpp
libs/rMlib/include/: Canvas.h  Device.h  Error.h  FrameBuffer.h  Input.h  MathUtil.h  UI.h
libs/rMlib/include/UI/: AppContext.h  BuildContext.h  Button.h  DynamicWidget.h  Flex.h  Future.h  Gesture.h  Image.h  Layout.h  Navigator.h  RenderObject.h  Rotate.h  Stack.h  StatefulWidget.h  StatelessWidget.h  Text.h  Timer.h  TypeID.h  Util.h  Widget.h  Wrap.h
libs/rm2fb/: Address.cpp  Address.h  AddressHooking.cpp  AddressHooking.h  CMakeLists.txt  Client.cpp  Client.h  ControlSocket.cpp  ControlSocket.h  IOCTL.cpp  IOCTL.h  ImageHook.cpp  ImageHook.h  InputDevice.cpp  InputDevice.h  InputMonitor.h  Message.h  PreloadHooks.cpp  PreloadHooks.h  README.md  Readme.md  Server.cpp  Server.h  ServerExe.cpp  ServerLib.cpp  SharedBuffer.cpp  SharedBuffer.h  Socket.cpp  Socket.h  rm2fb.service  rm2fb.socket  rm2fbctl.cpp  uinput.cpp  uinput.h
libs/rm2fb/Versions/: Version.cpp  Version.h  Version2.15.cpp  Version3.20.cpp  Version3.5.cpp  Version3.6.cpp  Version3.8.cpp
libs/rm2fb/include/rm2fb/: ControlSocket.h  Message.h  SharedBuffer.h
libs/rm2fb/opkg/: postinst  prerm  rm2fb-preload.env
libs/swtcon/: Addresses.h  CMakeLists.txt  Constants.h  Generator.h  SwtconState.cpp  SwtconState.h  Util.h  Vsync.cpp  Vsync.h  Waveforms.cpp  Waveforms.h  fb.cpp  fb.h  swtcon.cpp
libs/swtcon/include/: swtcon.h
libs/unistdpp/: CMakeLists.txt  file.cpp  mmap.cpp  pipe.cpp  poll.cpp  socket.cpp  unistdpp.cpp
libs/unistdpp/include/unistdpp/: error.h  file.h  ioctl.h  mmap.h  pipe.h  poll.h  shared_mem.h  socket.h  traits.h  unistdpp.h
nix/: README.md  configuration.nix  default.nix  example.nix  rm2-toolchain.nix
nix/modules/: console.nix  koreader.nix  launch.nix  module-list.nix  overlay.nix  remarkable.nix  rm2-display.nix  rm2-stuff.nix  tarball.nix  top-level.nix  vm.nix  xochitl.nix
test/: CMakeLists.txt
test/integration/: test.sh  xochitl.toml
test/unit/: .clang-tidy  CMakeLists.txt  TempFiles.h  TestRMLib.cpp  TestRm2fb.cpp  TestRocket.cpp  TestTilem.cpp  TestUnistdpp.cpp  TestYaft.cpp  rMLibTestHelper.h
tools/: CMakeLists.txt
tools/input-test/: CMakeLists.txt  main.cpp
tools/ioctl-dump/: CMakeLists.txt  dump.cpp  main.cpp  print.h  rm2fb_ioctl_dump.conf
tools/rm2fb-emu/: CMakeLists.txt  Messages.h  Socket.h  main.cpp  rm2fb-emu.cpp  rm2fb-forward.cpp  rm2fb-test.cpp
tools/rm2fb-forward/: CMakeLists.txt  main.cpp
tools/rm2fb-tests/: CMakeLists.txt  client.cpp  common.h  perf.cpp  server.cpp
tools/swtcon-preload/: CMakeLists.txt  main.cpp
tools/test/: CMakeLists.txt  Readme.md  main.cpp
tools/ui-tests/: CMakeLists.txt  main.cpp
tools/update-dump/: CMakeLists.txt  main.cpp
(+128 files in other folders)
