add_subdirectory(test)
add_subdirectory(swtcon-preload)
add_subdirectory(input-test)
add_subdirectory(ui-tests)
add_subdirectory(update-dump)
add_subdirectory(rm2fb-forward)
add_subdirectory(rm2fb-emu)

add_custom_target(tools)
add_dependencies(tools misc-test  input-test ui-tests)
if (TARGET swtcon-preload)
  add_dependencies(tools swtcon-preload)
endif()
